--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,7 @@
     <string name="address1">Address Line 1</string>
     <string name="address2">Address Line 2</string>
     <string name="representative_search">Representative Search</string>
-
-
+    <string name="my_represenatives">My Represenatives</string>
 
 
 </resources>
