motion layout added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,45 @@
     <string name="address2">Address Line 2</string>
     <string name="representative_search">Representative Search</string>
     <string name="my_represenatives">My Represenatives</string>
+    <string name="hi">
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+         European Union.European Union.European Union.European Union.European Union.European Union.European Union.European Union.
+
+    </string>
 
 
 </resources>
